# Lumilove_RAG

./: .gitignore  README.md  check_vector_db.py  clear_vector_database.py  config.py  env_example.txt  main.py  migrate_history_to_vector.py  pyproject.toml  requirements.txt
api/: __init__.py  chat.py
models/: __init__.py  database.py
schemas/: __init__.py  chat.py
services/: __init__.py  character_service.py  chat_service.py  openrouter_client.py  rag_service.py  springboot_sync.py  vector_store.py  vector_store.py.backup
