[tool.poetry]
name = "lumilove-rag"
version = "1.0.0"
description = "RAG聊天服务基于FastAPI"
authors = ["Thomas <thomas@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Web框架 - 核心功能
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

# 数据验证和配置
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"

# 数据库 - 基础功能
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
python-dotenv = "^1.0.0"

# HTTP和API
httpx = "^0.27.0"
python-multipart = "^0.0.9"

# 基础AI功能（不包含复杂依赖）
openai = "^1.12.0"
langchain-openai = "^0.3.23"
langchain-core = "^0.3.65"
langchain-community = "^0.3.25"
tiktoken = "^0.9.0"
numpy = "^2.3.0"
pandas = "^2.3.0"
redis = "^6.2.0"
sentence-transformers = "^4.1.0"
transformers = "^4.52.4"
torch = "^2.7.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
